--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-flake8<3.6.0
+flake8
 pep8-naming
 pre-commit
-pycodestyle<2.4.0
+pycodestyle
 restructuredtext_lint
-pytest==3.3.2
-attrs==19.1.0
+pytest
+attrs
 restview
 mox
 # TODO: Apps only
-pytest-django==3.1.2
-pytest-runner==3.0.1
+pytest-django
+pytest-runner
