--- a/omeroserver/Dockerfile
+++ b/omeroserver/Dockerfile
@@ -2,7 +2,9 @@ ARG OMEROSERVER_BASE_IMAGE=openmicroscopy/omero-server:latest
 FROM $OMEROSERVER_BASE_IMAGE
 
 USER root
-RUN dnf install -y -q \
+RUN dnf clean all
+    rm -rf /var/cache/dnf/*pgdg*
+    dnf install -y -q \
     git && \
     dnf clean all
 USER omero-server
