--- a/omeroserver/Dockerfile
+++ b/omeroserver/Dockerfile
@@ -2,8 +2,8 @@ ARG OMEROSERVER_BASE_IMAGE=openmicroscopy/omero-server:latest
 FROM $OMEROSERVER_BASE_IMAGE
 
 USER root
-RUN dnf clean all
-    rm -rf /var/cache/dnf/*pgdg*
+RUN dnf clean all && \
+    rm -rf /var/cache/dnf/*pgdg* && \
     dnf install -y -q \
     git && \
     dnf clean all
